<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_horizontal"
    tools:context=".ui.auth.signin.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="26dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="text"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="text"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="text"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/height_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/ukuran_atasan"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="text"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/ukuran_atasan_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/ukuran_bawahan"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/ukuran_bawahan_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/Button.Primary"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_signup_now"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>