<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_horizontal"
    tools:context=".ui.auth.signin.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="26dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/add_picture_profile"
            android:src="@drawable/ic_picture_empty"
            tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="text"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:minHeight="48dp"
        android:autofillHints=""
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/Button.Primary"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_continue"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>